--- a/include/style/style.css
+++ b/include/style/style.css
@@ -5,10 +5,20 @@
   text-decoration: none;
 }
 
+body{
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  height: auto;
+  width:100vw;
+}
 header{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
   background-color: #f1f1f1;
 }
