--- a/include/style/style.css
+++ b/include/style/style.css
@@ -18,7 +18,13 @@ body{
 }
 header{
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  background-color: #f1f1f1;
+  background-color: #040E89;
+  font-size: 1.5rem;
+  color: white;
+  width: 100%;
+  padding: 1rem;
+  
 }
