--- a/include/style/style.css
+++ b/include/style/style.css
@@ -22,9 +22,9 @@ header{
   justify-content: space-between;
   align-items: center;
   background-color: #040E89;
-  font-size: 1.5rem;
+  font-size: 3em;
   color: white;
   width: 100%;
   padding: 1rem;
-  
+
 }
