--- a/include/style/style.css
+++ b/include/style/style.css
@@ -22,9 +22,9 @@ header{
   justify-content: center;
   align-items: center;
   background-color: #040E89;
-  font-size: 3em;
+  font-size: 10em;
   color: white;
   width: 100%;
-  padding: 1rem;
+  padding: rem;
 
 }
