--- a/include/style/style.css
+++ b/include/style/style.css
@@ -22,7 +22,7 @@ header{
   justify-content: center;
   align-items: center;
   background-color: #040E89;
-  font-size: 1vh;
+  font-size: 3em;
   color: white;
   width: 100%;
 
