--- a/include/style/style.css
+++ b/include/style/style.css
@@ -22,8 +22,10 @@ header{
   justify-content: center;
   align-items: center;
   background-color: #040E89;
-  font-size: 3em;
+  font-size: 5em;
+  text-transform: uppercase;
   color: white;
   width: 100%;
+  padding:1em;
 
 }
